--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     ASSALOMU ALEKUM
   </div>
 
-  <script src="./scripts/script.js">
-
-  </script>
+  <script src="./scripts/script.js"></script>
 </body>
 
 </html>
